Fix post-excerpt tags and spacing

--- a/wp-content/themes/kennytran/assets/styles/main/7-components/_post-excerpt.scss
+++ b/wp-content/themes/kennytran/assets/styles/main/7-components/_post-excerpt.scss
@@ -14,6 +14,14 @@
     margin-left: auto;
     text-align: center;
 
+    &:not(:last-child) {
+        margin-bottom: map-get($spacers, xl);
+
+        @include mq-at-least(md) {
+            margin-bottom: map-get($spacers, xxxl);
+        }
+    }
+
     .c-post-excerpt__date {
         display: block;
         color: var(--color-accent);
@@ -52,7 +60,7 @@
         list-style: none;
 
         li {
-            &:not(:last-child) { margin-right: map-get($spacers, xxs); }
+            &:not(:last-child) { margin: 0 map-get($spacers, xxs) 0 0; }
         }
     }
 
@@ -64,8 +72,8 @@
 
         @extend %u-text-din;
 
+        margin: 0 0 map-get($spacers, sm);
         font-size: map-get($font-sizes, xl);
-        margin-top: 0;
 
         @each $breakpoint, $fontSize in $post-excerpt-title-sizes {
             @include mq-at-least($breakpoint) {
